--- a/hello.html
+++ b/hello.html
@@ -4,12 +4,9 @@
 <title>Page Title</title>
 </head>
 <body>
-
-<h1>tell me truth1</h1>
+<h1>tell me truth</h1>
 <p>This is a paragraph.</p>
-<p1>gThis is a paragraph.</p1>
-<p2>This is a paragraph.</p2>
-
-
+<p>im start</p>
+<p>maybe this can be last</p>
 </body>
 </html>
