im trying to change this good

--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,8 @@
 <h1>tell me truth</h1>
 <p>This is a paragraph.</p>
 <p>im start</p>
-<p>maybe this can be last</p>
+<p>2 area </p>
+<p>3 area </p>
+<p>maybe this can be lastgit commit -a -m "Quick update to README"</p>
 </body>
 </html>
