--- a/hello.html
+++ b/hello.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Fairy tales </title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>tell me truth</h1>
-<p>This is a paragraph.</p>
-<p>im start</p>
-<p>2 area </p>
-<p>3 area </p>
-<p>maybe this can be lastgit commit -a -m "Quick update to README"</p>
+<h1>Fairy tales</h1>
+<h2>Jack And The Beanstalk</h2>
+<p>Down in the valley was a village.
+<p>On the outskirts of the village stood a small, rundown cottage.</p>
+<p>And in the cottage lived a widow with her only son, Jack.</p>
+</p>
 </body>
 </html>
